# real_time_transalation_oguramasahiro

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESIGN_DOC.md  README.md  USE.md  add_subtitles.py  app.py  create_shortcut.bat  create_shortcut.ps1  dictionary.csv  docker-compose.yml  launch.bat  launch_debug.bat  launcher.py  pyproject.toml  requirements.txt  test_asr_accuracy.py  test_audio_file.py
experiments/: 20260312_gemini_25_flash_general.json  20260312_gemini_flash_25_economics.json  20260318_gemini_25_flash_general.json  example_20260305_gemini_flash_25.json  results.csv
scripts/: ws_debug.py
services/asr/: Dockerfile  pyproject.toml
services/asr/src/asr_service/: __init__.py  audio_capture.py  deepgram_client.py  main.py
services/translator/: Dockerfile  dictionary.csv  pyproject.toml
services/translator/src/translator_service/: __init__.py  dictionary.py  llm_translator.py  main.py  zoom_caption.py
services/ws/: Dockerfile  pyproject.toml
services/ws/src/ws_service/: __init__.py  main.py
src/real_time_translation/: __init__.py  config.py  gradio_demo.py  main.py  pipeline.py
src/real_time_translation/audio/: __init__.py  capture.py
src/real_time_translation/transcription/: __init__.py  deepgram_client.py
src/real_time_translation/translation/: __init__.py  dictionary.py  llm_translator.py
tests/: __init__.py  test_main.py
