[project]
name = "real-time-translation-asr"
version = "0.1.0"
description = "RTMP to Deepgram ASR service"
requires-python = ">=3.13"
dependencies = ["deepgram-sdk>=3.0.0", "httpx>=0.28.1"]

[project.scripts]
real-time-translation-asr = "asr_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/asr_service"]
