[project]
name = "real-time-translation-ws"
version = "0.1.0"
description = "WebSocket caption broadcast service"
requires-python = ">=3.13"
dependencies = ["fastapi>=0.128.0", "pydantic>=2.11.0", "uvicorn[standard]>=0.40.0"]

[project.scripts]
real-time-translation-ws = "ws_service.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ws_service"]
